# discord-AngelaMatr1x-bot

./: .dockerignore  main.py  pyproject.toml
commands/: events.py  fraction.py  main.py
components/: buttons.py  embeds.py
core/: models.py  sql.py
myAlembic/: env.py
myAlembic/versions/: bad784af76e5_generate_models.py
